@@ -1,3 +1,7 @@
+2011-09-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/amcryptsimple.pl: Do not use gpg-agent if it is not
+	  available.
+		  
 2011-09-02  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/selfcheck.c (print_platform): Another fix.
 
